--- a/style.css
+++ b/style.css
@@ -120,10 +120,10 @@ footer {
   flex-direction: column; /* title on top */
   background: #ffffff;
   padding: 1rem;
-  padding-top: 0.0rem;
+  padding-top: 0rem;
   border-radius: 10px;
   margin-bottom: 2rem;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   text-align: left;
   box-sizing: border-box; /* include padding in width calculations */
   width: 100%;
@@ -191,13 +191,18 @@ footer {
   overflow-wrap: break-word; /* prevent long words from overflowing */
 }
 
+.project-right-card p {
+  margin-top: 0.1rem;
+  margin-bottom: 0rem;
+}
 
 /* Optional: responsive adjustment */
 @media (max-width: 768px) {
   .project-content {
     flex-direction: column;
   }
-  .project-left-card, .project-right-card {
+  .project-left-card,
+  .project-right-card {
     flex: 1 1 100%;
     align-items: center;
   }
@@ -214,7 +219,7 @@ footer {
   background: #f9fafb;
   border-left: 5px solid #111827;
   border-radius: 8px;
-  font-family: 'Georgia', 'Times New Roman', serif;
+  font-family: "Georgia", "Times New Roman", serif;
   color: #111827;
 }
 
