--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ nav .nav-links a.active {
 
 .profile h1 {
   margin: 0.5rem;
-  font-size: 2.5rem;
+  font-size: 2.rem;
 }
 
 .profile img {
@@ -323,4 +323,5 @@ footer {
     color: #666;
   }
 }
+
 
