--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
   display: flex;
   align-items: center;
   padding: 0 2rem;
-  position: relative;
+  position: fixed;
   z-index: 500;
 }
 
@@ -324,6 +324,7 @@ footer {
     color: #666;
   }
 }
+
 
 
 
